--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
     <druid-version>1.1.12</druid-version>
     <mybatis-spring-version>2.0.3</mybatis-spring-version>
     <mysql.version>5.1.41</mysql.version>
+    <hutool.version>5.0.7</hutool.version>
+    <fastjson.version>1.2.62</fastjson.version>
   </properties>
 
   <dependencies>
@@ -126,6 +128,19 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>cn.hutool</groupId>
+      <artifactId>hutool-all</artifactId>
+      <version>${hutool.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>${fastjson.version}</version>
+    </dependency>
+
 
   </dependencies>
 
